--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@glidejs/glide": "^3.6.1",
+    "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.18",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
