--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "country-state-city": "^3.2.1",
+    "dotenv": "^16.4.5",
     "helmet": "^7.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
